Actualizar index.html

--- a/index.html
+++ b/index.html
@@ -269,18 +269,28 @@
 
         <div class="message">
             <h2>💛 Mi teronsito de azucar 💛</h2>
-            <p>Roxana, mi vida, hoy quiero regalarte estas flores amarillas virtuales porque representan todo lo que sientes por mí y todo lo que yo siento por ti.</p>
-            <p>Cada pétalo lleva mi amor, cada flor guarda un beso, y todo este jardín es pequeño comparado con lo inmenso de mi corazón por ti.</p>
-            <p>Eres mi sol, mi alegría, mi razón de sonreír cada mañana. 🌞</p>
+            <p>Mi amor talvez están no son el tipo de flores amarillas que se esperaba pero me gustaría regalarle un poquito de amor en forma de detalle.</p>
+
+            <p>Amor mio princesa no sé cómo explica que cada día de mi vida desde que la conocí tienen ese toque especial llamado Roxanita.</p>
+
+            <p>Que hermoso es por las mañanas recibir ese mensajito de buenos días de mi osito invernando y despertándose a las 10 de la mañana. Pero ese mensajito alegra infinito mi día.</p>
+
+<p>Saber que en cualquier momento del día puedo ver esa carita hermosa en una video llamada. </p>
+
+<p>Y sin contar que tengo a la mejor novia del mundo mundial, sin contar que mi novia trae ese chip de niña súper protectora, amorosa, cursi, tierna y hay veces un poquito regañona.</p>
+
+<p>Pero quiero que sepa que cada detallito de ti me encanta infinito, desde como me das besitos hasta como me regañas.</p>
+
+<p>Te amo mi amor hermosa.</p>
         </div>
 
         <button class="bouquet-button" onclick="createBouquet()">🌻 Crear Ramo Especial 🌻</button>
         <button class="bouquet-button" onclick="showSpecialMessage()">💌 Mensaje Secreto 💌</button>
 
         <div id="specialMessage" class="special-message">
-            <h3>🌻 Solo para ti, Roxana 🌻</h3>
-            <p>"En un mundo de colores, tú eres mi amarillo favorito. Eres la flor más hermosa de mi jardín del corazón."</p>
-            <p>💛 Te amo más que a todas las flores del mundo 💛</p>
+            <h3>🌻 Para la novia más hermosa del mundo mundial🌻</h3>
+            <p>Infinitos besitos para ti en este día mi amor hermosa preciosa encantadora. y muchos muchos abrazos para ti more</p>
+            <p>💛 Te amo mucho mucho amor mío, de aquí a la luna ida y vuelta a pasito de tortuga 💛</p>
         </div>
     </div>
 
